<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"

    tools:context=".CustomerRegisterActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/customer_status"
        android:textSize="40sp"
        android:layout_marginTop="15dp"
        android:text="@string/customerlogin"
        android:gravity="center"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:gravity="center"
        android:background="@android:color/white"
        android:textSize="20sp"
        android:id="@+id/email_customer"
        android:textColorHint="@android:color/black"/>
    <EditText
       android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:background="@android:color/white"
        android:textSize="20sp"
        android:id="@+id/password_customer"
        android:textColorHint="@android:color/black"/>

    <Button
        android:id="@+id/customer_login_button"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:textSize="20sp" />
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/don_t_have_account"
        android:id="@+id/register_customer_link"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/customer_register_button"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_margin="12dp"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:background="@android:color/holo_red_dark"
        android:textSize="20sp" />




</LinearLayout>